Added data, and base activity / controller types

--- a/FuelEconomyLookup/app/src/main/res/layout/activity_select_vehicle.xml
+++ b/FuelEconomyLookup/app/src/main/res/layout/activity_select_vehicle.xml
@@ -1,12 +1,33 @@
 <?xml version="1.0" encoding="utf-8"?>
 <layout xmlns:android="http://schemas.android.com/apk/res/android">
-    <data />
+    <data>
+        <variable name="controller" type="com.interview.vaporstream.fueleconomy.controller.FuelEconomyLookupController" />
+        <!-- adapters -->
+    </data>
     <LinearLayout
                   android:orientation="vertical"
                   android:layout_width="match_parent"
                   android:layout_height="match_parent">
 
+        <Spinner
+            android:layout_width="match_parent"
+            android:layout_height="match_parent"
+            android:id="@+id/select_year_spinner" />
 
+        <Spinner
+            android:layout_width="match_parent"
+            android:layout_height="match_parent"
+            android:id="@+id/select_make_spinner" />
+
+        <Spinner
+            android:layout_width="match_parent"
+            android:layout_height="match_parent"
+            android:id="@+id/select_model_spinner" />
+
+        <Spinner
+            android:layout_width="match_parent"
+            android:layout_height="match_parent"
+            android:id="@+id/select_vehicle_spinner" />
 
     </LinearLayout>
 </layout>
