--- a/FuelEconomyLookup/app/src/main/res/values/colors.xml
+++ b/FuelEconomyLookup/app/src/main/res/values/colors.xml
@@ -3,4 +3,7 @@
     <color name="colorPrimary">#69CA67</color>
     <color name="colorPrimaryDark">#297127</color>
     <color name="colorAccent">#D9881B</color>
+    <color name="solidBlack">#000000</color>
+    <color name="semiTransparentBlack">#99000000</color>
+    <color name="progressIndicatorBackground">#E6FFFFFF</color>
 </resources>
