--- a/FuelEconomyLookup/app/src/main/res/layout/activity_select_vehicle.xml
+++ b/FuelEconomyLookup/app/src/main/res/layout/activity_select_vehicle.xml
@@ -98,9 +98,11 @@
             <Button
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
+                android:layout_marginTop="@dimen/margin_large"
                 android:id="@+id/select_vehicle_button_submit"
                 android:text="@string/activity_select_vehicle_save_button"
                 android:padding="@dimen/padding_small"
+                android:background="@drawable/button_bg"
                 />
 
         </LinearLayout>
@@ -122,7 +124,8 @@
                 android:textColor="@color/colorAccent"
                 android:textSize="14sp"
                 android:layout_gravity="center_horizontal|center_vertical"
-                android:gravity="center_vertical|center_horizontal"/>
+                android:gravity="center_vertical|center_horizontal"
+                />
 
         </LinearLayout>
     </LinearLayout>
