--- a/FuelEconomyLookup/app/src/main/res/menu/menu_saved_menu_search.xml
+++ b/FuelEconomyLookup/app/src/main/res/menu/menu_saved_menu_search.xml
@@ -4,6 +4,6 @@
     <item android:id="@+id/search"
           android:title="@string/search"
           android:icon="@drawable/search_icon"
-          android:showAsAction="always"
-          app:showAsAction="always"/>
+          android:showAsAction="ifRoom"
+          app:showAsAction="ifRoom"/>
 </menu>
