--- a/FuelEconomyLookup/app/src/main/res/layout/activity_select_vehicle.xml
+++ b/FuelEconomyLookup/app/src/main/res/layout/activity_select_vehicle.xml
@@ -1,7 +1,7 @@
 <?xml version="1.0" encoding="utf-8"?>
 <layout xmlns:android="http://schemas.android.com/apk/res/android">
     <data>
-        <variable name="controller" type="com.interview.vaporstream.fueleconomy.controller.FuelEconomyLookupController" />
+        <variable name="controller" type="com.interview.fueleconomy.controller.FuelEconomyLookupController" />
         <!-- adapters -->
     </data>
     <LinearLayout
